# minimal-audio-engine

./: .gitattributes  CMakeLists.txt  CMakePresets.json  WINDOWS_SETUP.md  vcpkg.json
.github/agents/: Code Review.agent.md
cmake/: minimal-audio-engine-config.cmake.in
docker/: docker-build.bat  docker-exec.bat  docker-run-cmd.bat  docker-run.bat  docker-setup.bat
src/: CMakeLists.txt
src/audioengine/: CMakeLists.txt
src/audioengine/include/: audioengine.h  audiointerface.h
src/audioengine/src/: audioengine.cpp  audiointerface.cpp
src/cli/include/: cli.h
src/cli/src/: cli.cpp
src/coreengine/: CMakeLists.txt
src/coreengine/audioengine/: CMakeLists.txt
src/coreengine/audioengine/include/: audioengine.h  audiointerface.h
src/coreengine/audioengine/src/: audioengine.cpp  audiointerface.cpp
src/coreengine/devicemanager/include/: devicemanager.h
src/coreengine/include/: coreengine.h
src/coreengine/src/: coreengine.cpp
src/coreengine/trackmanager/include/: track.h  trackmanager.h
src/coreengine/trackmanager/src/: track.cpp
src/devicemanager/: CMakeLists.txt
src/devicemanager/include/: audiodevice.h  device.h  devicemanager.h  mididevice.h
src/devicemanager/src/: devicemanager.cpp
src/filemanager/: CMakeLists.txt
src/filemanager/include/: filemanager.h  midifile.h  wavfile.h
src/filemanager/src/: filemanager.cpp  wavfile.cpp
src/framework/: CMakeLists.txt
src/framework/include/: alsa_utils.h  engine.h  input.h  logger.h  messagequeue.h  observer.h  subject.h
src/framework/src/: alsa_utils.cpp  logger.cpp
src/midiengine/: CMakeLists.txt
src/midiengine/include/: midiengine.h  miditypes.h
src/midiengine/src/: midiengine.cpp
src/trackmanager/: CMakeLists.txt
src/trackmanager/include/: track.h
src/trackmanager/src/: track.cpp  trackmanager.cpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_audioengine_unit.cpp  test_track_unit.cpp
